libs/wingc/src/lsp/snapshots/rename_prepare/can_rename_vars.snap
---
source: libs/wingc/src/lsp/rename_prepare.rs
---
range:
  start:
    line: 3
    character: 8
  end:
    line: 3
    character: 15
placeholder: buckets

